--- a/index.html
+++ b/index.html
@@ -19,22 +19,30 @@
 <body>
     <h1>Welcome to the first testing site</h1>
 
-    <h2>Jordan is cool</h2>
-    <img src="images/sneaker.jpeg" alt="sneakers">
+    <h2>I am Jason Chu</h2>
+    <img src="images/jason.jpeg" alt="sneakers">
 
-    <p>At Jordan, we’re a global community of</p>
+    <p>This is my very first web building experiment. </p>
 
+    <p>Here is a little bit about myself, a diligent and enthusiastic barista with 4 years experience in the coffee industry, and 7 prior years experience in luxury retail.
+       Attention to detail, quality coffee, and training are important to me in my role as a barista. However, I like to think of myself as having a friendly and approachable
+       persona. </p>
+    
+    <p>Skills: </p>
     <ul> <!-- changed to list in the tutorial -->
-      <li>technologists</li>
-      <li>thinkers</li>
-      <li>builders</li>
+      <li>Customer Service</li>
+      <li>Relationship Building</li>
+      <li>Product Knowledge</li>
+      <li>Up-selling</li>
+      <li>Problem Solving</li>
+      <li>Latte Art</li>
     </ul>
-    <p>working together to keep the Internet <strong>alive and accessible</strong>, so people worldwide can be informed contributors and creators of the Web. 
-      We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
 
-    <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> 
-      to learn even more about the values and principles that guide the pursuit of our mission.</p>
+    <p>To get to know more about me, you can click the <a href="https://www.instagram.com/jasooon_chu/?hl=en">link </a>to take you to my instagram</p>
 
+    <p>Cheers, </p>
+    <p>Jason</p>
+   
 <button>Change user</button>
 
 
