--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
       <li>Latte Art</li>
     </ul>
 
-    <p>To get to know more about me, you can click the <a href="https://www.instagram.com/jasooon_chu/?hl=en">link </a>to take you to my instagram</p>
-
+    <p>
+    To get to know more about me, you can click the <a href="https://www.instagram.com/jasooon_chu/?hl=en">link </a>to take you to my instagram<br/>
+    Any questions, please <a href="mailto:mysfc@#@gmail.com>" title="Jason Chu" >email me</a>
+    </p>
+                                               
     <p>Cheers, </p>
     <p>Jason</p>
    
