--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 
 <body>
     <h1>Welcome to the first testing site</h1>
-
     <h2>I am Jason Chu</h2>
+                     
+    <nav>              
+       <a href="#myself">About me</a> <br/>
+       <a href="#">Portfolio</a>
+     </nav>
     <img src="images/jason.jpeg" alt="sneakers">
 
-    <p>This is my very first web building experiment. </p>
+    <p id="myself">This is my very first web building experiment. </p>
 
     <p>Here is a little bit about myself, a diligent and enthusiastic barista with 4 years experience in the coffee industry, and 7 prior years experience in luxury retail.
        Attention to detail, quality coffee, and training are important to me in my role as a barista. However, I like to think of myself as having a friendly and approachable
@@ -47,7 +51,7 @@
     <p>Jason</p>
    
 
-<button>Change user</button>
+<button>Click it</button>
 
 <footer>
       <p>©Copyright by Jason. All rights reversed.</p>
