--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                      
     <nav>              
        <a href="#myself">About me</a> <br/>
-       <a href="#">Portfolio</a>
+       <a href="Mozilla-splash-page/index.html">Portfolio</a>
      </nav>
        <hr/>           
                  
